https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/net/doc-files/net-properties.html

* More symbol definitions for the Z Notation (Isabelle fonts and LaTeX).
See also the group "Z Notation" in the Symbols dockable of
Isabelle/jEdit.


*** Isabelle/jEdit Prover IDE ***

* More robust 'proof' outline for method "induct": support nested cases.


*** Document preparation ***

* Option "document_build" determines the document build engine, as
defined in Isabelle/Scala (as system service). The subsequent engines
are provided by the Isabelle distribution:

  . "lualatex" (default): use ISABELLE_LUALATEX for a standard LaTeX
    build with optional ISABELLE_BIBTEX and ISABELLE_MAKEINDEX

  . "pdflatex": as above, but use ISABELLE_PDFLATEX (legacy mode for
    special LaTeX styles)

  . "build": delegate to the executable "./build pdf", using
    ISABELLE_LUALATEX by default

The presence of a "build" command within the document output directory
explicitly requires document_build=build. Minor INCOMPATIBILITY, need to
adjust session ROOT options.

* Improved LaTeX typesetting of \<open>...\<close> using \guilsinglleft ...
\guilsinglright. INCOMPATIBILITY, need to use \usepackage[T1]{fontenc}
(which is now also the default in "isabelle mkroot").

* Simplified typesetting of \<guillemotleft>...\<guillemotright> using \guillemotleft ...
\guillemotright from \usepackage[T1]{fontenc} --- \usepackage{babel} is
no longer required.


*** HOL ***

* Theory Multiset: dedicated predicate "multiset" is gone, use
explict expression instead.  Minor INCOMPATIBILITY.

* Theory Multiset: consolidated abbreviations Mempty, Melem, not_Melem
to empty_mset, member_mset, not_member_mset respectively.  Minor
INCOMPATIBILITY.

* Theory Multiset: consolidated operation and fact names:
    inf_subset_mset ~> inter_mset
    sup_subset_mset ~> union_mset
    multiset_inter_def ~> inter_mset_def
    sup_subset_mset_def ~> union_mset_def
    multiset_inter_count ~> count_inter_mset